<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorXMediaPrimaryDark"
    tools:context=".ui.extraction.ExtractionFragment">

    <TextView
        android:id="@+id/extraction_title"
        style="@style/home_text_style_semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extraction"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_video_edit"
            android:layout_width="200dp"
            android:background="@drawable/add_video"
            android:layout_height="200dp"
            android:layout_marginTop="-30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/txt_video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/home_text_style_semi_bold"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/select_video" />

            <Button
                android:id="@+id/btn_change_video_name"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/editing"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_extraction"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_button"
            android:text="@string/extract_audio"/>

    </LinearLayout>



</FrameLayout>